PARQUET-1265: Segfault on static ApplicationVersion initialization